Estruturação da página principal e NavBar

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <script src="js/jquery-3.6.3.min.js"></script>
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+        crossorigin="anonymous"
+    >
+    <link href="css/estilos.css" rel="stylesheet">
 
-    <title>Alura Typer</title>
+    <title>Frete por volume</title>
 </head>
 <body>
-    <h1>Criação da estrutura do projeto</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="#">Página inicial</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Calculadora de frete</a>
+                    </ul>
+                </div>
+                <div class="img-logo">
+                    <img src="img/icone_frete.png" alt="Caminhão de frete">
+                </div>
+        </div>
+    </nav>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+        crossorigin="anonymous">
+    </script>
 </body>
 </html>
