estruturação da navegação e layout das telas

--- a/public/pages/Calculadora/calculadora.html
+++ b/public/pages/Calculadora/calculadora.html
@@ -11,12 +11,12 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
         crossorigin="anonymous"
     >
-    <link href="css/estilos.css" rel="stylesheet">
+    <link href="./calculadora.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anybody:ital@1&display=swap" rel="stylesheet">
 
-    <title>Frete por volume</title>
+    <title>Calculadora de frete</title>
 </head>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
@@ -24,33 +24,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-light" aria-current="page" href="index.html">Página inicial</a>
+                        <a class="nav-link active text-light" aria-current="page" href="../../index.html">Página inicial</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="./pages/Calculadora/calculadora.html">Calculadora de frete</a>
+                        <a class="nav-link text-light" href="calculadora.html">Calculadora de frete</a>
                     </ul>
                 </div>
                 <div class="img-logo">
-                    <img src="img/icone_frete.png" alt="Caixa de produto sendo transportada">
+                    <img src="../../img/icone_frete.png" alt="Caixa de produto sendo transportada">
                 </div>
         </div>
     </nav>
 </header>
 <body>
-    <div class="div-index">
-        <div class="div-conteudo">
-            <div>
-                <h4>Calculadora de frete por parâmetros</h4>
-                <p>Aplicação desenvolvida para calcular o frete para algumas regiões de acordo com alguns parâmetros passados</p>
-            </div>
-            <a href="./pages/Calculadora/calculadora.html">
-                <button type="button" class="btn btn-primary btn-lg">Experimente Já!</button>
-            </a>
-        </div>  
-        <div class="div-img">
-            <img src="img/img_frete_index2.png" alt="Caminhão de frete" id="img-index">
-        </div>
-    </div>
+    <h1>Calculadora</h1>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
