--- a/public/pages/Calculadora/calculadora.html
+++ b/public/pages/Calculadora/calculadora.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/jquery-3.6.3.min.js"></script>
+    <script src="../../js/jquery-3.6.3.min.js"></script>
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
@@ -15,6 +15,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anybody:ital@1&display=swap" rel="stylesheet">
+    <script src="../../js/scripts.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <title>Calculadora de frete</title>
 </head>
@@ -37,7 +39,28 @@
     </nav>
 </header>
 <body>
-    <h1>Calculadora</h1>
+    <div class="div-principal">
+        <div class="div-form">
+            <form>
+                <label for="valorPeso" class="form-label">Valor do peso</label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">R$</span>
+                    <input type="number" class="form-control" id="valorPeso">
+                </div>
+
+                <label for="valorCubagem" class="form-label">Valor por cubagem</label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">R$</span>
+                    <input type="number" class="form-control" id="valorCubagem">
+                </div>
+            </form>
+            
+            <button type="button" class="btn btn-primary btn-lg" onclick="calcularValor()">Calcular</button>
+        </div>  
+        <div class="div-img">
+            <img src="../../img/img_frete_calculadora.png" alt="Caminhão de frete" id="img-calculadora">
+        </div>
+    </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
