Correção de nomeclatura

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
             </a>
         </div>  
         <div class="div-img">
-            <img src="img/img_frete_index2.png" alt="Caminhão de frete" id="img-index">
+            <img src="img/img_frete_index.png" alt="Caminhão de frete" id="img-index">
         </div>
     </div>
     
